crates/unsoundness_checker/tests/snapshots/invalid_overload_implementation/markdown_test__snippet_02_mypy.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
Success: no issues found in 1 source file
