crates/unsoundness_checker/tests/snapshots/invalid_overload_implementation/markdown_test__snippet_04_pyright.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
<temp_dir>/snippet_04.py
  <temp_dir>/snippet_04.py:8:12 - error: Type "Literal[b""]" is not assignable to return type "int | str"
    Type "Literal[b""]" is not assignable to type "int | str"
      "Literal[b""]" is not assignable to "int"
      "Literal[b""]" is not assignable to "str" (reportReturnType)
1 error, 0 warnings, 0 informations
