crates/unsoundness_checker/tests/snapshots/invalid_overload_implementation/markdown_test__snippet_05_pyright.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
0 errors, 0 warnings, 0 information
